Version 1.0.7 (Januari xxth 2013)
- replaced all localtime function with localtime_r
- Dashboard: P1 Smart Meter Energy does not show the retour values if not used
- Devices Tab: Check if any device is selected to delete
- Support for MAC serial ports
- Error message when serial port get disconnected
- updated to RFCOM SDK version 6.01
- Dashboard now includes server date
- Barometer graph values now displays as whole number
- meter values now only inserted in meter table when there is a difference in value
- implemented utility graph 'last 24 hours usage'
- added jwsmtp class
- Option to transfer old device logs/settings to a new device (for example when the device battery is replaced and received a new ID)

Version 1.0.6 (Januari 9th 2013)
- RFXCOM Lan will now keep retrying to connect when it does not succeed on the first time
- P1 Smart Meter Serial hardware implemented
- P1 Smart Meter TCP hardware implemented
- Fixed: Temp, Hum, TempHumBaro ID
- option to add a manual LightwaveRF switch
- Chime light/switch status will now also trigger a notification
- Web Protection, option to ignore (local) networks
- Code should now compile also with VS2010 express
- Code now compiles also with Debian (Mac OS)
- Lighting 1, ARC Doorbell is now send with a 'Chime' instead of AllOn
- P1 Smart Meter, Gas value now only send/update when the value is changing (once every 1 a 2 hours)
- P1 Smart Meter updates to shared clients now once every 60 seconds (reduces network traffic)
- Random Timer implemented (OnTime timer with +/- xxx minutes offset)

Version 1.0.5 (December 29th 2012)
- Start of History document