@@ -1,5 +1,5 @@
-CACHE MANIEST
-# ref 52
+CACHE MANIFEST
+# ref 53
 
 CACHE:
 favicon.ico
