@@ -11,6 +11,7 @@ Version 1.0.7 (Januari xxth 2013)
 - implemented utility graph 'last 24 hours usage'
 - added jwsmtp class
 - Option to transfer old device logs/settings to a new device (for example when the device battery is replaced and received a new ID)
+- Youless Pulse Counter Meter hardware implemented
 
 Version 1.0.6 (Januari 9th 2013)
 - RFXCOM Lan will now keep retrying to connect when it does not succeed on the first time
